team overlay socials

--- a/index.html
+++ b/index.html
@@ -126,15 +126,16 @@
                     alt="Matthew Dix, Graphic Design"
                     srcset="./img/person1x2.jpg 2x"
                   />
+                  <ul class="team__social">
+                    <li><i class="team__icon fa fa-facebook"></i></li>
+                    <li><i class="team__icon fa fa-twitter"></i></li>
+                    <li><i class="team__icon fa fa-pinterest-p"></i></li>
+                    <li><i class="team__icon fa fa-instagram"></i></li>
+                  </ul>
+
                   <figcaption class="team__caption">
                     <h6 class="team__name">Matthew Dix</h6>
                     <p class="team__description">Graphic Design</p>
-                    <div class="team__social-box">
-                      <i class="team__icon fa fa-facebook"></i>
-                      <i class="team__icon fa fa-twitter"></i>
-                      <i class="team__icon fa fa-pinterest-p"></i>
-                      <i class="team__icon fa fa-instagram"></i>
-                    </div>
                   </figcaption>
                 </figure>
               </li>
@@ -146,15 +147,15 @@
                     alt="Christopher Campbell, Branding/UX design"
                     srcset="./img/person2x2.jpg 2x"
                   />
+                  <ul class="team__social">
+                    <li><i class="team__icon fa fa-facebook"></i></li>
+                    <li><i class="team__icon fa fa-twitter"></i></li>
+                    <li><i class="team__icon fa fa-pinterest-p"></i></li>
+                    <li><i class="team__icon fa fa-instagram"></i></li>
+                  </ul>
                   <figcaption class="team__caption">
                     <h6 class="team__name">Christopher Campbell</h6>
                     <p class="team__description">Branding/UX design</p>
-                    <div class="team__social-box">
-                      <i class="team__icon fa fa-facebook"></i>
-                      <i class="team__icon fa fa-twitter"></i>
-                      <i class="team__icon fa fa-pinterest-p"></i>
-                      <i class="team__icon fa fa-instagram"></i>
-                    </div>
                   </figcaption>
                 </figure>
               </li>
@@ -166,15 +167,15 @@
                     alt="Michael Fertig, Developer"
                     srcset="./img/person3x2.jpg 2x"
                   />
+                  <ul class="team__social">
+                    <li><i class="team__icon fa fa-facebook"></i></li>
+                    <li><i class="team__icon fa fa-twitter"></i></li>
+                    <li><i class="team__icon fa fa-pinterest-p"></i></li>
+                    <li><i class="team__icon fa fa-instagram"></i></li>
+                  </ul>
                   <figcaption class="team__caption">
                     <h6 class="team__name">Michael Fertig</h6>
                     <p class="team__description">Developer</p>
-                    <div class="team__social-box">
-                      <i class="team__icon fa fa-facebook"></i>
-                      <i class="team__icon fa fa-twitter"></i>
-                      <i class="team__icon fa fa-pinterest-p"></i>
-                      <i class="team__icon fa fa-instagram"></i>
-                    </div>
                   </figcaption>
                 </figure>
               </li>
@@ -185,7 +186,10 @@
     </main>
     <footer class="footer">
       <div class="footer__container">
-        <p class="footer__rights">© 2016 MoGo free PSD template by <span class="footer__template-creator">Laaqiq</span></p>
+        <p class="footer__rights">
+          © 2016 MoGo free PSD template by
+          <span class="footer__template-creator">Laaqiq</span>
+        </p>
         <form class="footer__form" autocomplete="on">
           <label class="footer__label">
             <input
