--- a/index.html
+++ b/index.html
@@ -167,12 +167,14 @@
                     alt="Michael Fertig, Developer"
                     srcset="./img/person3x2.jpg 2x"
                   />
-                  <ul class="team__social">
-                    <li><i class="team__icon fa fa-facebook"></i></li>
-                    <li><i class="team__icon fa fa-twitter"></i></li>
-                    <li><i class="team__icon fa fa-pinterest-p"></i></li>
-                    <li><i class="team__icon fa fa-instagram"></i></li>
-                  </ul>
+                  <div class="team__overlay">
+                    <ul class="team__social">
+                      <li><i class="team__icon fa fa-facebook"></i></li>
+                      <li><i class="team__icon fa fa-twitter"></i></li>
+                      <li><i class="team__icon fa fa-pinterest-p"></i></li>
+                      <li><i class="team__icon fa fa-instagram"></i></li>
+                    </ul>
+                  </div>
                   <figcaption class="team__caption">
                     <h6 class="team__name">Michael Fertig</h6>
                     <p class="team__description">Developer</p>
